fix bug where clicking a node label would make the context menu popup in the top left corner and fix cursor pointer not showing a hand on webkit

--- a/app/javascript/stylesheets/custom/tree.css
+++ b/app/javascript/stylesheets/custom/tree.css
@@ -15,7 +15,7 @@
     }
 
     .label {
-      @apply text-xs fill-current h-full w-full overflow-hidden break-words;
+      @apply text-xs fill-current h-full w-full overflow-hidden break-words pointer-events-none;
     }
 
     [aria-hidden='true'] {
